Creation repo, index 1st exercise

--- a/pages/triangle/triangle.html
+++ b/pages/triangle/triangle.html
@@ -8,17 +8,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/styles/index.css">
-    <link rel="stylesheet" href="/pages/triangle/sections.css">
+    <link rel="stylesheet" href="../../styles/index.css">
+    <link rel="stylesheet" href="triangle.css">
     <title>Web 2 | Lista de Exercícios</title>
 </head>
 
 <body>
     <header>
         <nav class="menu">
-            <a href="http://portal.utfpr.edu.br/" target="_blank"><img class="utf-logo" src="/img/utfpr-logo.png" alt="UTFPR Logo"></a>
+            <a href="http://portal.utfpr.edu.br/" target="_blank"><img class="utf-logo" src="../../img/utfpr-logo.png" alt="UTFPR Logo"></a>
             <div class="links">
-                <a class="menu-item" href="/">Home</a>
+                <a class="menu-item" href="index.html">Home</a>
                 <a class="menu-item" href="https://github.com/mat-zip" target="_blank">GitHub</a>
                 <a class="menu-item" href="https://www.linkedin.com/in/mat-/" target="_blank">Contato</a>
             </div>
@@ -40,9 +40,11 @@
             <button class = "check-button" type="button" onclick="triangleType()">Tipo do triângulo</button>
             <div class="result"><p></p></div>
         </div>
+
+        <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/blob/master/pages/triangle/triangle.js">SOURCE CODE</a>
     </section>
 
-    <script src="/pages/triangle/triangle.js"></script>
+    <script src="triangle.js"></script>
 </body>
 
 </html>
