correction home link at the page

--- a/pages/triangle/triangle.html
+++ b/pages/triangle/triangle.html
@@ -18,7 +18,7 @@
         <nav class="menu">
             <a href="http://portal.utfpr.edu.br/" target="_blank"><img class="utf-logo" src="../../img/utfpr-logo.png" alt="UTFPR Logo"></a>
             <div class="links">
-                <a class="menu-item" href="index.html">Home</a>
+                <a class="menu-item" href="../../index.html">Home</a>
                 <a class="menu-item" href="https://github.com/mat-zip" target="_blank">GitHub</a>
                 <a class="menu-item" href="https://www.linkedin.com/in/mat-/" target="_blank">Contato</a>
             </div>
