IMC script and page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h2>Lista 1 | Entrada e saída de Dados e Variáveis</h2>
         <ul class = "list-section">
             <li><a href="pages/triangle/triangle.html">Triângulo script</a></li>
+            <li><a href="pages/imc/imc.html">IMC Script</a></li>
         </ul>
     </section>
 
