New section, Desafios

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
             <li><a href="pages/imc/imc.html">IMC Script</a></li>
         </ul>
     </section>
+    <section>
+        <h1>Desafios</h1>
+        <h2>Desafio 1 | Diálogos e Temporizadores</h2>
+        <ul class = "list-section">
+            <li><a href="pages/triangle/triangle.html">Triângulo script</a></li>
+        </ul>
+    </section>
 
 </body>
 </html>
