--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
         <h1>Listas de Exercícios</h1>
         <h2>Lista 1 | Entrada e saída de Dados e Variáveis</h2>
         <ul class = "list-section">
-            <li><a href="pages/triangle/triangle.html">Triângulo script</a></li>
-            <li><a href="pages/imc/imc.html">IMC Script</a></li>
+            <li><a href="pages/list/triangle/triangle.html">Triângulo script</a></li>
+            <li><a href="pages/list/imc/imc.html">IMC Script</a></li>
         </ul>
     </section>
     <section>
         <h1>Desafios</h1>
         <h2>Desafio 1 | Diálogos e Temporizadores</h2>
         <ul class = "list-section">
-            <li><a href="pages/triangle/triangle.html">Triângulo script</a></li>
+            <li><a href="pages/list/triangle/triangle.html">Triângulo script</a></li>
+            <li><a href="pages/challenges/semana-academica/semana-academica.html">Semana Acadêmica</a></li>
+            <li><a href="pages/challenges/barra-de-rolagem/barra-de-rolagem.html">Barra de Rolagem</a></li>
+            <li><a href="pages/challenges/fim-do-mundo/fim-do-mundo.html">Miss Fim do Mundo</a></li>
         </ul>
     </section>
 
