--- a/pages/list/imc/imc.html
+++ b/pages/list/imc/imc.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../../styles/index.css">
+    <link rel="stylesheet" href="../../../styles/index.css">
     <link rel="stylesheet" href="imc.css">
     <title>Web 2 | Lista de Exercícios</title>
 </head>
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="http://portal.utfpr.edu.br/" target="_blank"><img class="utf-logo" src="../../img/utfpr-logo.png" alt="UTFPR Logo"></a>
+            <a href="http://portal.utfpr.edu.br/" target="_blank"><img class="utf-logo" src="../../../img/utfpr-logo.png" alt="UTFPR Logo"></a>
             <div class="links">
-                <a class="menu-item" href="../../index.html">Home</a>
+                <a class="menu-item" href="../../../index.html">Home</a>
                 <a class="menu-item" href="https://github.com/mat-zip" target="_blank">GitHub</a>
                 <a class="menu-item" href="https://www.linkedin.com/in/mat-/" target="_blank">Contato</a>
             </div>
@@ -29,9 +29,11 @@
         <div class="fields">
             <button class = "generic-button" type="button" onclick="calcIMC()">Calcular IMC</button>
 
-            <div class="result"><p></p></div>
-        <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/tree/master/pages/imc">SOURCE CODE</a>
-    </section>
+            <div class="result"><p></p></div> 
+            <br>
+            <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/tree/master/pages/imc">SOURCE CODE</a>
+        </div>
+        </section>
 
     <script src="imc.js"></script>
 </body>
