Atividade III, Version 2(Anon Functions)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             <li><a href="pages/list/triangle/triangle.html">Triângulo script</a></li>
             <li><a href="pages/list/imc/imc.html">IMC Script</a></li>
         </ul>
+        <h2>Lista 3 | Funções</h2>
+        <ul class = "list-section">
+            <li><a href="pages/list/aprovado-reprovado/aprovado-reprovado.html">Universidade</a></li>
+
+        </ul>
+
+
     </section>
     <section>
         <h1>Desafios</h1>
