--- a/pages/challenges/semana-academica/semana-academica.html
+++ b/pages/challenges/semana-academica/semana-academica.html
@@ -34,7 +34,7 @@
                 <p></p>
             </div>
             <br>
-            <a class="source" href="">SOURCE CODE</a>
+            <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/tree/master/pages/challenges/semana-academica">SOURCE CODE</a>
         </div>
     </section>
 
