--- a/pages/challenges/barra-de-rolagem/barra-de-rolagem.html
+++ b/pages/challenges/barra-de-rolagem/barra-de-rolagem.html
@@ -236,7 +236,7 @@
                 <p></p>
             </div>
             <br>
-            <a class="source" href="">SOURCE CODE</a>
+            <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/tree/master/pages/challenges/barra-de-rolagem">SOURCE CODE</a>
         </div>
     </section>
 
