Atividade III Version 5(Anon Functions)

--- a/pages/list/aprovado-reprovado/aprovado-reprovado.html
+++ b/pages/list/aprovado-reprovado/aprovado-reprovado.html
@@ -27,6 +27,19 @@
 
     <section>
         <div class="fields">
+            <label for="nota1">Nota 1 <small>Ex: 9.8</small></label>
+            <input type="number" name="nota1" id="nota1">
+
+            <label for="nota2">Nota 2 <small>Ex: 9.8</small></label>
+            <input type="number" name="nota2" id="nota2">
+
+            <label for="aulas">Quantidade de aulas ministradas</label>
+            <input type="number" name="aulas" id="aulas">
+
+            <label for="frequencia">Quantidade de aulas frequentadas</label>
+            <input type="number" name="frequencia" id="frequencia">
+
+            <button class = "generic-button" type="button" onclick="finalDoSemestre()">Situação do Aluno</button>
             <div class="result"><p></p></div> 
             <br>
             <a class="source" href="">SOURCE CODE</a>
