Refactoring SOURCE CODE links

--- a/pages/list/aprovado-reprovado/aprovado-reprovado.html
+++ b/pages/list/aprovado-reprovado/aprovado-reprovado.html
@@ -42,7 +42,7 @@
             <button class = "generic-button" type="button" onclick="finalDoSemestre()">Situação do Aluno</button>
             <div class="result"><p></p></div> 
             <br>
-            <a class="source" href="">SOURCE CODE</a>
+            <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/tree/master/pages/list/aprovado-reprovado">SOURCE CODE</a>
         </div>
         </section>
 
