--- a/pages/list/triangle/triangle.html
+++ b/pages/list/triangle/triangle.html
@@ -42,7 +42,7 @@
             <br>
         </div>
 
-        <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/blob/master/pages/triangle/triangle.js">SOURCE CODE</a>
+        <a class="source" href="https://github.com/mat-zip/web2-lista-de-exercicios/tree/master/pages/list/triangle">SOURCE CODE</a>
     </section>
 
     <script src="triangle.js"></script>
