--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
             <li><a href="pages/challenges/barra-de-rolagem/barra-de-rolagem.html">Barra de Rolagem</a></li>
             <li><a href="pages/challenges/fim-do-mundo/fim-do-mundo.html">Miss Fim do Mundo</a></li>
         </ul>
+        <h2>Desafio 2 | Funções</h2>
+        <ul class="list-section">
+            <li><a href="pages/challenges/base-expoente/base-expoente.html">Base e expoente</a></li>
+            <li><a href="pages/challenges/base-expoente-arrow/base-expoente-arrow.html">Base e expoente(Arrow Function)</a></li>
+            <li><a href="pages/list/aprovado-reprovado/aprovado-reprovado.html">Aprovado / Reprovado</a></li>
+            <li><a href="pages/challenges/natal/natal.html">Contagem para o Natal</a></li>
+        </ul>
     </section>
     <section>
         <h1>Material</h1>
