--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <h2>Lista 3 | Funções</h2>
         <ul class = "list-section">
             <li><a href="pages/list/aprovado-reprovado/aprovado-reprovado.html">Universidade</a></li>
-
+        </ul>
+        <h2>Lista 4 | Objetos Nativos</h2>
+        <ul class = "list-section">
+            <li><a href="pages/list/selecao/selecao.html">Seleção Brasileira</a></li>
         </ul>
 
 
