--- a/index.html
+++ b/index.html
@@ -54,12 +54,21 @@
             <li><a href="pages/list/aprovado-reprovado/aprovado-reprovado.html">Aprovado / Reprovado</a></li>
             <li><a href="pages/challenges/natal/natal.html">Contagem para o Natal</a></li>
         </ul>
+        <h2>Desafio 3 | Objetos Nativos</h2>
+        <ul class = "list-section">
+            <li><a href="pages/challenges/selecao-br-parte2/selecao.html">Seleção Brasileira pt.2</a></li>
+        </ul>
     </section>
     <section>
         <h1>Material</h1>
         <h2>Objetos Nativos | Array</h2>
         <ul class = "list-section">
             <li><a href="pages/material/ordena-linguagem/ordena-linguagem.html">Ordena Linguagens</a></li>
+        </ul>
+        <h2>Objetos e Classes | Aula 7</h2>
+        <ul class = "list-section">
+            <li><a href="pages/material/banda/banda.html">Banda</a></li>
+            <li><a href="pages/material/forma/forma.html">Forma</a></li>
         </ul>
     </section>
 
