--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <h2>Desafio 3 | Objetos Nativos</h2>
         <ul class = "list-section">
             <li><a href="pages/challenges/selecao-br-parte2/selecao.html">Seleção Brasileira pt.2</a></li>
+            <li><a href="pages/challenges/jogo-do-brasil/jogo.html">Jogo do Brasil</a></li>
+            <li><a href="pages/challenges/gerar-senha/senha.html">Gerar senha aleatória</a></li>
         </ul>
     </section>
     <section>
