Exercicio Classe | Imovel

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
             <li><a href="pages/material/banda/banda.html">Banda</a></li>
             <li><a href="pages/material/forma/forma.html">Forma</a></li>
         </ul>
+        <h2>Classes | Aula 8</h2>
+        <ul class = "list-section">
+            <li><a href="pages/material/imovel/imovel.html">Imovel</a></li>
+        </ul>
     </section>
 
 </body>
