Exercicio Classe | Classe Social

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <h2>Classes | Aula 8</h2>
         <ul class = "list-section">
             <li><a href="pages/material/imovel/imovel.html">Imovel</a></li>
+            <li><a href="pages/material/classe-social/classe.html">Classe Social</a></li>
         </ul>
     </section>
 
