Desafio 4| Cor e Sorteio

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             <li><a href="pages/challenges/jogo-do-brasil/jogo.html">Jogo do Brasil</a></li>
             <li><a href="pages/challenges/gerar-senha/senha.html">Gerar senha aleatória</a></li>
         </ul>
+        <h2>Desafio 4 | Eventos</h2>
+        <ul class = "list-section">
+            <li><a href="pages/challenges/cor-de-fundo/cor-de-fundo.html">Cor de Fundo</a></li>
+            <li><a href="pages/challenges/dado/dado.html">Sorteio</a></li>
+        </ul>
     </section>
     <section>
         <h1>Material</h1>
