Desafio 4 |Energia consumo e Endereco

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <ul class = "list-section">
             <li><a href="pages/challenges/cor-de-fundo/cor-de-fundo.html">Cor de Fundo</a></li>
             <li><a href="pages/challenges/dado/dado.html">Sorteio</a></li>
+            <li><a href="pages/challenges/energia-consumo/energia-consumo.html">Consumo de Energia</a></li>
+            <li><a href="pages/challenges/endereco/endereco.html">Endereço</a></li>
         </ul>
     </section>
     <section>
