Aula 10 | Operador This

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             <li><a href="pages/material/imovel/imovel.html">Imovel</a></li>
             <li><a href="pages/material/classe-social/classe.html">Classe Social</a></li>
         </ul>
+        <h2>This | Aula 10</h2>
+        <ul class = "list-section">
+            <li><a href="pages/material/decrement/decrement.html">Contagem Regressiva</a></li>
+            <li><a href="pages/material/altera-texto/altera-texto.html">Altera texto</a></li>
+        </ul>
     </section>
 
 </body>
