Desafio IV | Eventos

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             <li><a href="pages/challenges/dado/dado.html">Sorteio</a></li>
             <li><a href="pages/challenges/energia-consumo/energia-consumo.html">Consumo de Energia</a></li>
             <li><a href="pages/challenges/endereco/endereco.html">Endereço</a></li>
+            <li><a href="pages/challenges/cadastro/cadastro.html">Cadastro</a></li>
+            <li><a href="pages/challenges/caixa-eletronico/caixa-eletronico.html">Caixa Eletrônico</a></li>
         </ul>
     </section>
     <section>
