Atividade V | Cadastro de Professores

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
     <title>Web 2 | Lista de Exercícios</title>
@@ -34,6 +35,10 @@
         <h2>Lista 4 | Objetos Nativos</h2>
         <ul class = "list-section">
             <li><a href="pages/list/selecao/selecao.html">Seleção Brasileira</a></li>
+        </ul>
+        <h2>Lista 5 | Sistema de Cadastro de Professores, Alunos e Disciplinas</h2>
+        <ul class = "list-section">
+            <li><a href="pages/list/cadastro-de-professores/cadastro.html">Cadastro de Professores</a></li>
         </ul>
 
 
