Atividade VI | Chuck Norris

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <ul class = "list-section">
             <li><a href="pages/list/cadastro-de-professores/cadastro.html">Cadastro de Professores</a></li>
         </ul>
+        <h2>Lista 6 | Chuck Norris</h2>
+        <ul class = "list-section">
+            <li><a href="pages/list/chuck-norris-matheus-isabela/index.html">Cadastro de Professores</a></li>
+        </ul>
 
 
     </section>
